# -3DViewer_v2.0

./: README.md
src/: Makefile  doxyconfig  tests.cc
src/3dviewer_v2/: CMakeLists.txt  main.cc
src/3dviewer_v2/back/: 3dviewer.h  controller.h  model.h  model_parser.cc  model_transformation.cc
src/3dviewer_v2/front/: 3dviewer.cc  3dviewer.h  3dviewer.ui  glwidget.cc  glwidget.h  numlineedit.cc  numlineedit.h  sizes.cc  sizes.h  sizes.ui
